--- a/manifestos/deployment/weather-service.yml
+++ b/manifestos/deployment/weather-service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: grpc-weather
+  name: grpc-weather-app
 spec:
   selector:
-    app: grpc-weather
+    app: grpc-weather-app
   ports:
     - name: grpc
       port: 9003
