--- a/manifestos/deployment/configmap.yml
+++ b/manifestos/deployment/configmap.yml
@@ -3,17 +3,18 @@ kind: ConfigMap
 metadata:
   name: grpc-weather-app
 data:
-  PG_HOST: postgres-db
+  PG_HOST: "10.110.150.159"
   PG_PORT: "5434"
   PG_USER: postgres
-  PG_PASSWORD: qwerty
+  PG_PASSWORD: postgres
+  POSTGRES_PASSWORD: postgres
   PG_NAME: postgres
-  PG_PING_ENABLED: true
-  PG_MAX_OPEN_CONN: 10
-  PG_MAX_IDLE_CONN: 10
-  PG_SSL_MODE: disable
+  PG_PING_ENABLED: "true"
+  PG_MAX_OPEN_CONN: "10"
+  PG_MAX_IDLE_CONN: "10"
+  PG_SSL_MODE: "disable"
   GRPC_ADDR: ":9003"
   HTTP_ADDR: ":8003"
-  WEATHER_API_TOKEN: c46b15514212497bb9a162423220904
-  APP_MODE: local
+  WEATHER_API_TOKEN: "c46b15514212497bb9a162423220904"
+  APP_MODE: "local"
   MIGRATE_PATH: "file://scheme"
